# backend-topology-definition

./: .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: github-actions.yml
crczp/topology_definition/: image_naming.py  models.py  utils.py  validators.py
kypo/topology/definition/yaml/: models.py
kypo/topology_definition/: models.py  validators.py
tests/: test_serialization.py
tests/assets/: sandbox.yml  topology-with-monitoring.yml  topology.yml
